added config for openshift

--- a/pom.xml
+++ b/pom.xml
@@ -175,128 +175,172 @@
                 <artifactId>swagger-hibernate-validations</artifactId>
                 <version>${swagger-version}</version>
             </dependency>
-
         </dependencies>
     </dependencyManagement>
 
-    <build>
-        <pluginManagement>
-            <plugins>
-                <!-- this is needed to run integration tests -->
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>2.19.1</version>
-                    <executions>
-                        <execution>
-                            <id>run-tests</id>
-                            <phase>integration-test</phase>
-                            <goals>
-                                <goal>integration-test</goal>
-                                <goal>verify</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-dependency-plugin</artifactId>
-                    <executions>
-                        <execution>
-                            <id>unpack</id>
-                            <phase>process-test-classes</phase>
-                            <goals>
-                                <goal>unpack</goal>
-                            </goals>
+
+    <profiles>
+        <profile>
+            <id>quiz</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <modules>
+                <module>backend</module>
+                <module>quizApi</module>
+                <module>report</module>
+                <!--<module>gameApi</module>-->
+            </modules>
+
+            <build>
+                <finalName>quiz</finalName>
+                <pluginManagement>
+                    <plugins>
+                        <!-- this is needed to run integration tests -->
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-failsafe-plugin</artifactId>
+                            <version>2.19.1</version>
+                            <executions>
+                                <execution>
+                                    <id>run-tests</id>
+                                    <phase>integration-test</phase>
+                                    <goals>
+                                        <goal>integration-test</goal>
+                                        <goal>verify</goal>
+                                    </goals>
+                                </execution>
+                            </executions>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-dependency-plugin</artifactId>
+                            <executions>
+                                <execution>
+                                    <id>unpack</id>
+                                    <phase>process-test-classes</phase>
+                                    <goals>
+                                        <goal>unpack</goal>
+                                    </goals>
+                                    <configuration>
+                                        <artifactItems>
+                                            <artifactItem>
+                                                <groupId>org.wildfly</groupId>
+                                                <artifactId>wildfly-dist</artifactId>
+                                                <version>${wildfly.version}</version>
+                                                <type>zip</type>
+                                                <overWrite>false</overWrite>
+                                                <outputDirectory>${jbossTarget}</outputDirectory>
+                                            </artifactItem>
+                                        </artifactItems>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                        </plugin>
+
+                        <plugin>
+                            <groupId>org.wildfly.plugins</groupId>
+                            <artifactId>wildfly-maven-plugin</artifactId>
+                            <version>1.1.0.Alpha11</version>
                             <configuration>
-                                <artifactItems>
-                                    <artifactItem>
-                                        <groupId>org.wildfly</groupId>
-                                        <artifactId>wildfly-dist</artifactId>
-                                        <version>${wildfly.version}</version>
-                                        <type>zip</type>
-                                        <overWrite>false</overWrite>
-                                        <outputDirectory>${jbossTarget}</outputDirectory>
-                                    </artifactItem>
-                                </artifactItems>
+                                <skip>true</skip>
+                                <jbossHome>${jbossHome}</jbossHome>
+                                <add-user>
+                                    <users>
+                                        <user>
+                                            <username>admin</username>
+                                            <password>admin</password>
+                                        </user>
+                                    </users>
+                                </add-user>
+                                <java-opts>
+                                </java-opts>
                             </configuration>
-                        </execution>
-                    </executions>
-                </plugin>
+                            <executions>
+                                <execution>
+                                    <id>init</id>
+                                    <phase>pre-integration-test</phase>
+                                    <goals>
+                                        <goal>start</goal>
+                                        <goal>deploy</goal>
+                                    </goals>
+                                </execution>
+                                <execution>
+                                    <id>shutdown</id>
+                                    <phase>post-integration-test</phase>
+                                    <goals>
+                                        <goal>undeploy</goal>
+                                        <goal>shutdown</goal>
+                                    </goals>
+                                </execution>
+                            </executions>
+                        </plugin>
 
-                <plugin>
-                    <groupId>org.wildfly.plugins</groupId>
-                    <artifactId>wildfly-maven-plugin</artifactId>
-                    <version>1.1.0.Alpha11</version>
-                    <configuration>
-                        <skip>true</skip>
-                        <jbossHome>${jbossHome}</jbossHome>
-                        <add-user>
-                            <users>
-                                <user>
-                                    <username>admin</username>
-                                    <password>admin</password>
-                                </user>
-                            </users>
-                        </add-user>
-                        <java-opts>
-                        </java-opts>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>init</id>
-                            <phase>pre-integration-test</phase>
-                            <goals>
-                                <goal>start</goal>
-                                <goal>deploy</goal>
-                            </goals>
-                        </execution>
-                        <execution>
-                            <id>shutdown</id>
-                            <phase>post-integration-test</phase>
-                            <goals>
-                                <goal>undeploy</goal>
-                                <goal>shutdown</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
+                        <plugin>
+                            <groupId>org.jacoco</groupId>
+                            <artifactId>jacoco-maven-plugin</artifactId>
+                            <version>0.7.7.201606060606</version>
+                            <executions>
+                                <execution>
+                                    <id>default-prepare-agent</id>
+                                    <goals>
+                                        <goal>prepare-agent</goal>
+                                    </goals>
+                                </execution>
+                                <execution>
+                                    <id>default-report</id>
+                                    <phase>prepare-package</phase>
+                                    <goals>
+                                        <goal>report</goal>
+                                    </goals>
+                                </execution>
+                                <execution>
+                                    <id>default-prepare-agent-integration</id>
+                                    <phase>package</phase>
+                                    <goals>
+                                        <goal>prepare-agent-integration</goal>
+                                    </goals>
+                                </execution>
+                                <execution>
+                                    <id>default-report-integration</id>
+                                    <goals>
+                                        <goal>report-integration</goal>
+                                    </goals>
+                                </execution>
+                            </executions>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+        </profile>
+        <profile>
+            <!-- When built in OpenShift the 'openshift' profile will be used when invoking mvn. -->
+            <!-- Use this profile for any OpenShift specific customization your app will need. -->
+            <!-- By default that is to put the resulting archive into the 'deployments' folder. -->
+            <!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
+            <id>openshift</id>
+            <modules>
+                <module>backend</module>
+                <module>quizApi</module>
+                <module>report</module>
+            </modules>
+            <build>
+                <finalName>SampleApp</finalName>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-war-plugin</artifactId>
+                        <version>2.3</version>
+                        <configuration>
+                            <failOnMissingWebXml>false</failOnMissingWebXml>
+                            <outputDirectory>target</outputDirectory>
+                            <warName>ROOT</warName>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
-                <plugin>
-                    <groupId>org.jacoco</groupId>
-                    <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.7.7.201606060606</version>
-                    <executions>
-                        <execution>
-                            <id>default-prepare-agent</id>
-                            <goals>
-                                <goal>prepare-agent</goal>
-                            </goals>
-                        </execution>
-                        <execution>
-                            <id>default-report</id>
-                            <phase>prepare-package</phase>
-                            <goals>
-                                <goal>report</goal>
-                            </goals>
-                        </execution>
-                        <execution>
-                            <id>default-prepare-agent-integration</id>
-                            <phase>package</phase>
-                            <goals>
-                                <goal>prepare-agent-integration</goal>
-                            </goals>
-                        </execution>
-                        <execution>
-                            <id>default-report-integration</id>
-                            <goals>
-                                <goal>report-integration</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
 
 </project>
