--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,6 @@
         <swagger-version>1.5.10</swagger-version>
     </properties>
 
-
-    <!--
-    Here we define all third-party dependencies we need in the sub-modules, so that we
-    do not have to copy&paste each time the <version> and <scope> tags
-    -->
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -49,7 +44,6 @@
                 <groupId>org.jboss.spec</groupId>
                 <artifactId>jboss-javaee-7.0</artifactId>
                 <version>1.0.3.Final</version>
-                <!-- Import all libraries definitions in this dependency pom file  -->
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -104,7 +98,6 @@
                 <scope>test</scope>
             </dependency>
 
-            <!-- Arquilian, needed for integration testing of EJB -->
             <dependency>
                 <groupId>org.jboss.arquillian</groupId>
                 <artifactId>arquillian-bom</artifactId>
@@ -112,7 +105,6 @@
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
-
             <dependency>
                 <groupId>org.wildfly.arquillian</groupId>
                 <artifactId>wildfly-arquillian-container-managed</artifactId>
@@ -175,6 +167,7 @@
                 <module>backend</module>
                 <module>quizApi</module>
                 <module>report</module>
+                <module>gameApi</module>
             </modules>
 
             <build>
