--- a/quizApi/pom.xml
+++ b/quizApi/pom.xml
@@ -14,6 +14,7 @@
 
 
     <dependencies>
+        <!-- models/services -->
         <dependency>
             <groupId>com.woact.dolplads</groupId>
             <artifactId>backend</artifactId>
@@ -23,6 +24,7 @@
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
         </dependency>
+        <!-- test -->
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-client</artifactId>
@@ -31,6 +33,12 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>3.0.1</version>
+            <scope>test</scope>
         </dependency>
         <!-- for api documentation -->
         <dependency>
@@ -41,27 +49,16 @@
             <groupId>io.swagger</groupId>
             <artifactId>swagger-hibernate-validations</artifactId>
         </dependency>
-        <!-- test -->
-        <dependency>
-            <groupId>io.rest-assured</groupId>
-            <artifactId>rest-assured</artifactId>
-            <version>3.0.1</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
         <plugins>
-
-            <!-- make sure we calculate code coverage -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
             </plugin>
-
-            <!-- Make sure that Wildfly is automatically downloaded and installed -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
+                <groupId>org.apache.maven.plugins</groupId> <!-- villflua download -->
                 <artifactId>maven-dependency-plugin</artifactId>
             </plugin>
             <plugin>
