--- a/gameApi/pom.xml
+++ b/gameApi/pom.xml
@@ -95,6 +95,11 @@
             <groupId>io.swagger</groupId>
             <artifactId>swagger-jaxrs</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.woact.dolplads</groupId>
+            <artifactId>dtos</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
