--- a/gameApi/game.yml
+++ b/gameApi/game.yml
@@ -24,7 +24,7 @@ database:
   password: sa
 
   # the JDBC URL
-  url: jdbc:h2:mem:test;INIT=CREATE SCHEMA IF NOT EXISTS TEST
+  url: jdbc:h2:mem:test;INIT=CREATE SCHEMA IF NOT EXISTS TEST;DB_CLOSE_ON_EXIT=FALSE // closes automatically
 
   properties:
       charSet: UTF-8
