--- a/dtos/pom.xml
+++ b/dtos/pom.xml
@@ -20,6 +20,11 @@
             <groupId>io.swagger</groupId>
             <artifactId>swagger-hibernate-validations</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.woact.dolplads</groupId>
+            <artifactId>backend</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
