--- a/gameApi/pom.xml
+++ b/gameApi/pom.xml
@@ -228,6 +228,17 @@
                     </execution>
                 </executions>
             </plugin>
+
+
+            <!-- make sure we calculate code coverage -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+            </plugin>
+
+
+
+
         </plugins>
     </build>
 </project>
