--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>dtos</module>
         <module>testapi</module>
         <module>dropWizzy</module>
+        <module>soap</module>
     </modules>
 
     <name>Exam2016</name>
@@ -257,18 +258,26 @@
             <build>
                 <pluginManagement>
                     <plugins>
+
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-shade-plugin</artifactId>
-                            <version>2.4.3</version>
+                            <artifactId>maven-jar-plugin</artifactId>
+                            <version>3.0.2</version>
                             <executions>
                                 <execution>
-                                    <phase>package</phase>
                                     <goals>
-                                        <goal>shade</goal>
+                                        <goal>test-jar</goal>
                                     </goals>
                                 </execution>
                             </executions>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-war-plugin</artifactId>
+                            <version>3.0.0</version>
+                            <configuration>
+                                <failOnMissingWebXml>false</failOnMissingWebXml>
+                            </configuration>
                         </plugin>
                         <!-- this is needed to run integration tests -->
                         <plugin>
@@ -286,6 +295,7 @@
                                 </execution>
                             </executions>
                         </plugin>
+
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-dependency-plugin</artifactId>
@@ -317,7 +327,7 @@
                             <artifactId>wildfly-maven-plugin</artifactId>
                             <version>1.1.0.Alpha11</version>
                             <configuration>
-                                <skip>true</skip>
+                            <!--    <skip>true</skip> -->
                                 <jbossHome>${jbossHome}</jbossHome>
                                 <add-user>
                                     <users>
@@ -349,6 +359,29 @@
                                 </execution>
                             </executions>
                         </plugin>
+
+                        <!-- used by soap module -->
+                        <plugin>
+                            <groupId>org.jvnet.jax-ws-commons</groupId>
+                            <artifactId>jaxws-maven-plugin</artifactId>
+                            <version>2.3.1-b20150201.1248</version>
+                        </plugin>
+
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-shade-plugin</artifactId>
+                            <version>2.4.3</version>
+                            <executions>
+                                <execution>
+                                    <phase>package</phase>
+                                    <goals>
+                                        <goal>shade</goal>
+                                    </goals>
+                                </execution>
+                            </executions>
+                        </plugin>
+
+
 
                         <plugin>
                             <groupId>org.jacoco</groupId>
@@ -383,6 +416,7 @@
                                 </execution>
                             </executions>
                         </plugin>
+
                     </plugins>
                 </pluginManagement>
             </build>
